# diff.rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
benches/: benches.rs
examples/: diff.rs  simple.rs
src/: lib.rs
tests/: tests.rs
tests/data/: gitignores.chars.txt  gitignores.lines.txt
