[package]
name = "diff"
version = "0.1.12"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
description = "An LCS based slice and string diffing implementation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/diff"
homepage = "https://github.com/utkarshkukreti/diff.rs"
repository = "https://github.com/utkarshkukreti/diff.rs"

[dev-dependencies]
speculate = "0.1.2"
quickcheck = "0.9.0"
criterion = "0.3.5"

[[bench]]
name = "benches"
harness = false
