[package]
name = "diff"
version = "0.1.13"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
description = "An LCS based slice and string diffing implementation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/diff"
homepage = "https://github.com/utkarshkukreti/diff.rs"
repository = "https://github.com/utkarshkukreti/diff.rs"

[dev-dependencies]
criterion = "0.5.1"
fastrand = "2.0.1"
quickcheck = "1.0.3"

[[bench]]
name = "benches"
harness = false
